--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hk-mcp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "src/index.ts",
+  "main": "build/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
