--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hk-mcp",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "",
-  "main": "build/index.js",
+  "main": "build/server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
